elinks (0.11.3-8) unstable; urgency=low

  * Fix bash-ism in debian/rules get-orig-source target.  Thanks Raphael
    Geissert <atomo64@gmail.com> (Closes: #477976)

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Apr 2008 23:31:08 +0530

elinks (0.11.3-7) unstable; urgency=low

  * Use '<<' versioning rather than '<=' for Conflicts/Replaces.  Thanks Colin
    Watson <cjwatson@ubuntu.com> (Closes: #475520)
  * Enable the FSP file transfer protocol (Closes: #478007)
    + Patch 13_fsp-display-dir.diff to fix bug in directory listing

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Apr 2008 01:36:11 +0530

elinks (0.11.3-6) unstable; urgency=low

  * Remove 11_303164_css_display_none.diff as it is useless without the fix
    for upstream bug 722.
  * Change ELinks category in desktop file from Categories=Utility;Network; to
    Categories=Network;WebBrowser;  Thanks Franklin PIAT <fpiat@bigfoot.com>
    (Closes: #474393)
  * Steal a few .desktop file improvements and translations from Ubuntu [from
    Siegfried-Angel Gevatter Pujals (RainCT) <rainct@ubuntu.com>]
  * Much improved packages descriptions

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Thu, 10 Apr 2008 13:34:13 +0530

elinks (0.11.3-5) unstable; urgency=low

  * Pass --enable-88-colors to configure for main build (Closes: #466483)
  * Patch 11_303164_css_display_none.diff to handle display:none in CSS
    (Closes: #303164)
  * Patch 12_338402_cfmakeraw_exotic_term.diff to fix cfmakeraw() to not
    disable XON/XOFF flow control (Closes: #338402)
  * Remove linda overrides files

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Thu, 06 Mar 2008 12:11:51 +0530

elinks (0.11.3-4) unstable; urgency=low

  * Add a DM-Upload-Allowed: yes field
  * Update 02_setup-bugs-FSSTND.diff to prevent changing contrib/elinks.conf
    (it is not used anymore).
  * Update 06_459467_ui.leds.enable_0.diff to set leds.enable to default: 0 in
    elinks.conf(5).