@@ -2,8 +2,10 @@ elinks (0.11.3-8) unstable; urgency=low
 
   * Fix bash-ism in debian/rules get-orig-source target.  Thanks Raphael
     Geissert <atomo64@gmail.com> (Closes: #477976)
+  * Update 13_fsp-display-dir.diff to workaround fsplib ABI dependency on
+    _FILE_OFFSET_BITS.  Thanks Kalle Olavi Niemitalo <kon@iki.fi>
 
- -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Sun, 27 Apr 2008 23:31:08 +0530
+ -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Mon, 28 Apr 2008 23:31:21 +0530
 
 elinks (0.11.3-7) unstable; urgency=low
 
